--- a/Donations/Views/Home/Index.cshtml
+++ b/Donations/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 <div class="text-center d-flex flex-column align-items-center">
     <img src="~/img/logo.png" alt="Logo" class="mb-4" style="max-width: 300px;">
 
-    <div class="d-flex justify-content-between w-100" style="max-width: 400px;">
-        <a href="/Login?Type=Donor" class="btn btn-danger px-4">User</a>
-        <a href="/Login?Type=Center" class="btn btn-danger px-4">Hospital</a>
+    <div class="d-flex justify-content-evenly w-100" style="max-width: 400px;">
+        <a href="/Login?loginType=Donor" class="btn btn-danger px-4">User</a>
+        <a href="/Login?loginType=DonationCenter" class="btn btn-danger px-4">Hospital</a>
     </div>
 </div>
