--- a/Donations/Views/Login/Index.cshtml
+++ b/Donations/Views/Login/Index.cshtml
@@ -5,12 +5,12 @@
     <img src="~/img/logo.png" alt="Logo" class="mb-4" style="max-width: 300px;">
     <h1>Sign in - @(Model.IsDonationCenter ? "Donation Center" : "Donor")</h1>
     <form method="post" class="w-100" style="max-width: 400px;">
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 text-start">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" name="email" required>
         </div>
 
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 text-start">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
