--- a/Donations/Views/Register/Index.cshtml
+++ b/Donations/Views/Register/Index.cshtml
@@ -7,22 +7,27 @@
     <form method="post" class="w-100" style="max-width: 400px;">
         <div class="form-group mb-3 text-start">
             <label for="fullName" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="fullName" name="fullName" required>
+            <input type="text" class="form-control" id="fullName" name="FullName" required>
         </div>
 
         <div class="form-group mb-3 text-start">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email" required>
+            <input type="email" class="form-control" id="email" name="Email" required>
+        </div>
+
+        <div class="form-group mb-3 text-start">
+            <label for="contactInfo" class="form-label">Contact Info</label>
+            <input type="text" class="form-control" id="contactInfo" name="ContactInfo" required>
         </div>
 
         <div class="form-group mb-3 text-start">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <input type="password" class="form-control" id="password" name="Password" required>
         </div>
 
         <div class="form-group mb-3 text-start">
             <label for="bloodType" class="form-label">Blood Type</label>
-            <select class="form-control" id="bloodType" name="bloodType" required>
+            <select class="form-control" id="bloodType" name="BloodType" required>
                 @foreach (var bloodType in Model.BloodTypes)
                 {
                     <option value="@bloodType.Value">@bloodType.Key</option>
@@ -32,7 +37,7 @@
 
         <div class="form-group mb-3 text-start">
             <label for="location" class="form-label">Location</label>
-            <select class="form-control" id="location" name="location" required>
+            <select class="form-control" id="location" name="LocationId" required>
                 @foreach (var location in Model.EligibleLocations)
                 {
                     <option value="@location.Id">@location.Name</option>
