--- a/Donations/Views/Register/Index.cshtml
+++ b/Donations/Views/Register/Index.cshtml
@@ -3,6 +3,13 @@
 <div class="text-center d-flex flex-column align-items-center">
     <img src="~/img/logo.png" alt="Logo" class="mb-4" style="max-width: 300px;">
     <h1>Sign up</h1>
+    
+    @if (Model.ErrorMessage != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            An error occurred: @Model.ErrorMessage
+        </div>
+    }
 
     <form method="post" class="w-100" style="max-width: 400px;">
         <div class="form-group mb-3 text-start">
