--- a/Donations/Views/Login/Index.cshtml
+++ b/Donations/Views/Login/Index.cshtml
@@ -4,6 +4,14 @@
 <div class="text-center d-flex flex-column align-items-center">
     <img src="~/img/logo.png" alt="Logo" class="mb-4" style="max-width: 300px;">
     <h1>Sign in - @(Model.IsDonationCenter ? "Donation Center" : "Donor")</h1>
+    
+    @if (Model.Failed)
+    {
+        <div class="alert alert-danger" role="alert">
+            Invalid email or password
+        </div>
+    }
+    
     <form method="post" class="w-100" style="max-width: 400px;">
         <div class="form-group mb-3 text-start">
             <label for="email" class="form-label">Email</label>
