make it possible to add requests

--- a/Donations/Views/CenterDashboard/Index.cshtml
+++ b/Donations/Views/CenterDashboard/Index.cshtml
@@ -3,6 +3,6 @@
 <div class="text-center d-flex flex-column align-items-center">
     <h1>Welcome @Model.DonationCenter.Name - @Model.DonationCenter.Location.Name</h1>
     <h2>Dashboard</h2>
-    <h2>Add request</h2>
+    <a href="/CenterDashboard/AddRequest" class="btn btn-danger btn-lg">Add request</a>
     <h2>Accept/reject appointments</h2>
 </div>
