display lists of requests to potentially fulfill

--- a/Donations/Views/DonorDashboard/Available.cshtml
+++ b/Donations/Views/DonorDashboard/Available.cshtml
@@ -9,24 +9,26 @@
         <div class="col-12 col-lg-8 mx-auto">
             @foreach (var request in Model.Requests)
             {
-                <div class="card mb-3 hover-shadow">
-                    <div class="card-body">
-                        <h5 class="card-title">@request.DonationCenter.Name</h5>
-                        <p class="card-text">
-                            <i class="bi bi-geo-alt"></i> @request.DonationCenter.Location.Name<br>
-                            <i class="bi bi-calendar-event"></i>@request.Date.ToString("d MMM yyyy")<br>
-                            <i class="bi bi-droplet"></i> Needed blood types: 
-                            @string.Join(", ", request.BloodTypes.Select(bt => bt.ToHumanReadableString()))<br>
-                        </p>
+                <a href="/Requests/@request.Id" class="text-decoration-none mb-3 d-block">
+                    <div class="card mb-3 hover-shadow">
+                        <div class="card-body">
+                            <h5 class="card-title">@request.DonationCenter.Name</h5>
+                            <p class="card-text">
+                                <i class="bi bi-geo-alt"></i> @request.DonationCenter.Location.Name<br>
+                                <i class="bi bi-calendar-event"></i>@request.Date.ToString("d MMM yyyy")<br>
+                                <i class="bi bi-droplet"></i> Needed blood types:
+                                @string.Join(", ", request.BloodTypes.Select(bt => bt.ToHumanReadableString()))<br>
+                            </p>
+                        </div>
                     </div>
-                </div>
+                </a>
             }
 
             @if (!Model.Requests.Any())
             {
-                    <div class="text-center text-muted">
-                        <p>No blood requests available at the moment.</p>
-                    </div>
+                <div class="text-center text-muted">
+                    <p>No blood requests available at the moment.</p>
+                </div>
             }
         </div>
     </div>
