--- a/Donations/Views/Shared/_Layout.cshtml
+++ b/Donations/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using Donations.Entities.User
+﻿@using Donations.Entities.Medical
+@using Donations.Entities.User
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<User> UserManager
 @{
@@ -46,7 +47,8 @@
                             <i class="fas fa-user fa-2x"></i>
                         </div>
                         <div class="text-start">
-                            <div class="fw-bold">@currentUser!.FullName</div>
+                            <div class="fw-bold">@currentUser!.FullName
+                                (@currentUser!.Donor!.BloodType.ToHumanReadableString())</div>
                             <div class="small">@currentUser!.Donor!.Points points</div>
                         </div>
                     </div>
